Fix overlaping tag badges on blog posts

--- a/themes/mm/sass/app.scss
+++ b/themes/mm/sass/app.scss
@@ -111,6 +111,7 @@ a {
   word-wrap: break-word;
 }
 
+.badge,
 .btn {
   margin: 0;
 }
